making some changes

--- a/django-store/core/templates/base/header.html
+++ b/django-store/core/templates/base/header.html
@@ -48,7 +48,9 @@
                         </table>
 
                     </div>
-
+                    <div style="text-align: center">
+                        <a style="text-align: center;font-size: 13px" href="{% url 'user_basket' %}">مشاهده سبد خرید</a>
+                    </div>
 
 
 
