--- a/django-store/core/templates/homepage/products_of_brand.html
+++ b/django-store/core/templates/homepage/products_of_brand.html
@@ -11,7 +11,7 @@ category
           <div class="col-9 col-sm-9 col-md-9 col-lg-9 row p-0 m-0 h-100 w-100">
                          <div class="col-12" style="direction: rtl;text-align: right;">
                           <a href="#" style="text-decoration: none;color:rgb(80, 80, 80)">فروشگاه سدمد کالا</a>
-                        </div>
+                         </div>
                         <div class="col-12 m-0 p-0">
                             <div class="bg-light m-2" dir="rtl" style="border-radius: 10px;">
 
@@ -49,10 +49,10 @@ category
 
                             {% for product in products %}
                                 <div class="col-4 col-sm-4 col-md-4 col-lg-3 p-0 m-0 h-100 w-100 bg-light" style="border: 1px solid rgb(189, 189, 189);text-align: right;width: 100%;height: 100%;">
-                                        <a href="{% url 'product_details' product.product.slug %}" style="text-decoration: none">
-                                             <img class="pt-2 pb-2" src="{{ product.product.image.url }}" style="width: 100%; height: 80%;border-radius: 15px;">
-                                              <div  style="font-size: 76%;text-align: center;direction: rtl;color: rgb(80, 80, 80);">{{ product.product.title }}</div>
-                                                {% if product.number_in_stock is not 0 %}
+                                        <a href="{% url 'product_details' product.slug %}" style="text-decoration: none">
+                                             <img class="pt-2 pb-2" src="{{ product.image.url }}" style="width: 100%; height: 80%;border-radius: 15px;">
+                                              <div  style="font-size: 76%;text-align: center;direction: rtl;color: rgb(80, 80, 80);">{{ product.title }}</div>
+                                                {% if product.products.all.first.number_in_stock is not 0 %}
                                                 <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-check" style="color: green;"></i> : موجود در انبار</div>
                                                 {% else %}
                                                  <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-times" style="color: red;"></i> : موجود در انبار</div>
@@ -61,8 +61,8 @@ category
                                               <div class="pl-3" style="text-align: left;direction: ltr;">
                                                 <span class="badge badge-danger mr-1" style="font-size: 70%;">%۲۰</span>
                                                 <span style="color: grey;text-decoration: line-through;font-size: 70%;">۸۵,۰۰۰</span>
-                                                <p class="pl-2" style="color: black;font-weight: bold;">{{ product.price}}</p>
-                                                <p class="pr-3" style="text-align: right;direction: ltr;font-size: 78%;color:rgb(44, 44, 44);" >{{ product.shop.name}} <i class="fas fa-store-alt" style="color: rgb(175, 23, 23);"></i></p>
+                                                <p class="pl-2" style="color: black;font-weight: bold;">{{ product.products.all.first.price}}</p>
+                                                <p class="pr-3" style="text-align: right;direction: ltr;font-size: 78%;color:rgb(44, 44, 44);" >{{ product.products.all.first.shop.name}} <i class="fas fa-store-alt" style="color: rgb(175, 23, 23);"></i></p>
                                               </div>
                                         </a>
 
@@ -74,7 +74,7 @@ category
                           </div>
                         </div>
                         <div class="col-3" style="text-align: center;" dir="rtl">
-                                                            <div class="bg-light mt-5" style="border-radius: 15px" dir="rtl">
+                              <div class="bg-light mt-5" style="border-radius: 15px" dir="rtl">
                                   <div class="mb-3">
                                       دسته بندی محصولات :
                                   </div>
@@ -92,21 +92,22 @@ category
                               </div>
                               <div class="bg-light mt-2" style="border-radius: 15px" dir="rtl">
                                   <div class="mb-3">
-                                      برند های محصولات :
+                                      فروشنده های محصولات :
                                   </div>
-                               {% for brand in brands %}
+                               {% for shop in shops %}
                                    <div class="checkbox">
                                   <label>
-                                    <input type="checkbox" data-toggle="toggle" value="{{ brand.slug }}">
-                                      {{ brand.brand_name }}
+                                    <input type="checkbox" data-toggle="toggle" value="{{ shop.slug }}">
+                                      {{ shop.name}}
                                   </label>
                                 </div>
                                {% endfor %}
 
 
-                              </div>
 
+                              </div>
                         </div>
-        </div>
+
+          </div>
       </div>
 {% endblock %}
