--- a/django-store/core/templates/homepage/single_product.html
+++ b/django-store/core/templates/homepage/single_product.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block title %}
-    {{ user.user_baskets }}
+    {{ object.title }}
 {% endblock %}
 {% block body %}
 
