--- a/django-store/core/templates/homepage/products.html
+++ b/django-store/core/templates/homepage/products.html
@@ -47,30 +47,30 @@ category
                         </div>
                         <div class="col-12 row d-flex p-2 m-0 h-100 w-100" style="border-radius: 10px;">
 
-                            {% for product in search_products %}
-                                <div class="col-4 col-sm-4 col-md-4 col-lg-3 p-0 m-0 h-100 w-100 bg-light" style="border: 1px solid rgb(189, 189, 189);text-align: right;width: 100%;height: 100%;">
-                                        <a href="{% url 'product_details' product.product.slug %}" style="text-decoration: none">
-                                             <img class="pt-2 pb-2" src="{{ product.product.image.url }}" style="width: 100%; height: 80%;border-radius: 15px;">
-                                              <div  style="font-size: 76%;text-align: center;direction: rtl;color: rgb(80, 80, 80);">{{ product.product.title }}</div>
-                                                {% if product.products.all.first.number_in_stock is not 0 %}
-                                                <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-check" style="color: green;"></i> : موجود در انبار</div>
-                                                {% else %}
-                                                 <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-times" style="color: red;"></i> : موجود در انبار</div>
-                                                {% endif %}
-
-                                              <div class="pl-3" style="text-align: left;direction: ltr;">
-                                                <span class="badge badge-danger mr-1" style="font-size: 70%;">%۲۰</span>
-                                                <span style="color: grey;text-decoration: line-through;font-size: 70%;">۸۵,۰۰۰</span>
-                                                <p class="pl-2" style="color: black;font-weight: bold;">{{ product.price}}</p>
-                                                <p class="pr-3" style="text-align: right;direction: ltr;font-size: 78%;color:rgb(44, 44, 44);" >{{ product.shop.name}} <i class="fas fa-store-alt" style="color: rgb(175, 23, 23);"></i></p>
-                                              </div>
-                                        </a>
-
-                                </div>
-
-
-
-                            {% endfor %}
+{#                            {% for product in search_products %}#}
+{#                                <div class="col-4 col-sm-4 col-md-4 col-lg-3 p-0 m-0 h-100 w-100 bg-light" style="border: 1px solid rgb(189, 189, 189);text-align: right;width: 100%;height: 100%;">#}
+{#                                        <a href="{% url 'product_details' product.product.slug %}" style="text-decoration: none">#}
+{#                                             <img class="pt-2 pb-2" src="{{ product.product.image.url }}" style="width: 100%; height: 80%;border-radius: 15px;">#}
+{#                                              <div  style="font-size: 76%;text-align: center;direction: rtl;color: rgb(80, 80, 80);">{{ product.product.title }}</div>#}
+{#                                                {% if product.products.all.first.number_in_stock is not 0 %}#}
+{#                                                <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-check" style="color: green;"></i> : موجود در انبار</div>#}
+{#                                                {% else %}#}
+{#                                                 <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-times" style="color: red;"></i> : موجود در انبار</div>#}
+{#                                                {% endif %}#}
+{##}
+{#                                              <div class="pl-3" style="text-align: left;direction: ltr;">#}
+{#                                                <span class="badge badge-danger mr-1" style="font-size: 70%;">%۲۰</span>#}
+{#                                                <span style="color: grey;text-decoration: line-through;font-size: 70%;">۸۵,۰۰۰</span>#}
+{#                                                <p class="pl-2" style="color: black;font-weight: bold;">{{ product.price}}</p>#}
+{#                                                <p class="pr-3" style="text-align: right;direction: ltr;font-size: 78%;color:rgb(44, 44, 44);" >{{ product.shop.name}} <i class="fas fa-store-alt" style="color: rgb(175, 23, 23);"></i></p>#}
+{#                                              </div>#}
+{#                                        </a>#}
+{##}
+{#                                </div>#}
+{##}
+{##}
+{##}
+{#                            {% endfor %}#}
 
                           </div>
                         </div>
