--- a/django-store/core/templates/homepage/category_products.html
+++ b/django-store/core/templates/homepage/category_products.html
@@ -76,8 +76,8 @@ category
                             </div>
                         </div>
                         <div class="col-12 row d-flex p-2 m-0 h-100 w-100" style="border-radius: 10px;">
-
-                            {% for product in products %}
+                          {% if products %}
+                                                          {% for product in products %}
                                 <div class="col-4 col-sm-4 col-md-4 col-lg-3 p-0 m-0 h-100 w-100 bg-light" style="border: 1px solid rgb(189, 189, 189);text-align: right;width: 100%;height: 100%;">
                                         <a href="{% url 'product_details' product.slug %}" style="text-decoration: none">
                                              <img class="pt-2 pb-2" src="{{ product.image.url }}" style="width: 100%; height: 80%;border-radius: 15px;">
@@ -86,7 +86,7 @@ category
                                                 <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-check" style="color: green;"></i> : موجود در انبار</div>
                                                 {% else %}
                                                  <div style="text-align:center;font-size: 70%;color: black;" > <i class="fas fa-times" style="color: red;"></i> : موجود در انبار</div>
-                                                {% endif %} 
+                                                {% endif %}
 
                                               <div class="pl-3" style="text-align: left;direction: ltr;">
                                                 <span class="badge badge-danger mr-1" style="font-size: 70%;">%۲۰</span>
@@ -100,6 +100,8 @@ category
 
 
                             {% endfor %}
+                          {% endif %}
+
 
                           </div>
                         </div>
