--- a/django-store/core/templates/homepage/home_page.html
+++ b/django-store/core/templates/homepage/home_page.html
@@ -121,7 +121,7 @@
         {% for discount in discounts %}
                       <div class="col-6 col-sm-4 col-md-2 col-lg-2 mt-2 pb-3" style="height: auto;background-color: white;border-radius: 15px;" >
 
-                        <a class="w-100 h-100 mb-3" href="#" style="color:black;text-decoration: none;">
+                        <a class="w-100 h-100 mb-3" href="{% url 'product_details' discount.product.product.slug %}" style="color:black;text-decoration: none;">
                           <img class="mt-3" src="{{ discount.product.product.image.url }}"  style="width: 100%; height: 80%rem;border-radius: 15px;">
                         <div class="mt-3" style="text-align: right;">{{ discount.product.product.title }}</div>
                         <div>
@@ -164,7 +164,7 @@
 
                 {% for mobile in mobiles|slice:"0:4"%}
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-3" style="height: auto;">
-                    <a href="#" style="text-decoration: none">
+                    <a href="{% url 'product_details' mobile.product.slug %}" style="text-decoration: none">
                         <img class="mx-auto mt-4 w-100" src="{{ mobile.product.image.url }}" style="width: 100%;height: auto;">
                         <div class="mx-auto w-100" style="text-align: center;color: gray;text-decoration: none;font-size: 10px;">{{ mobile.product.title}}</div>
                         <div><span class="badge badge-danger mr-1">%۲۰</span><span style="text-decoration: line-through;color: gray;">۱۲,۰۰۰</span></div>
@@ -185,7 +185,7 @@
 
                 {% for mobile in mobiles|slice:"4:8"%}
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-3" style="height: auto;">
-                    <a href="#" style="text-decoration: none">
+                    <a href="{% url 'product_details' mobile.product.slug %}" style="text-decoration: none">
                         <img class="mx-auto mt-4 w-100" src="{{ mobile.product.image.url }}" style="width: 100%;height: auto;">
                         <div class="mx-auto w-100" style="text-align: center;color: gray;text-decoration: none;font-size: 10px;">{{ mobile.product.title}}</div>
                         <div><span class="badge badge-danger mr-1">%۲۰</span><span style="text-decoration: line-through;color: gray;">۱۲,۰۰۰</span></div>
@@ -208,7 +208,7 @@
 
                 {% for mobile in mobiles|slice:"8:12"%}
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-3" style="height: auto;">
-                        <a href="#" style="text-decoration: none">
+                        <a href="{% url 'product_details' mobile.product.slug %}" style="text-decoration: none">
                             <img class="mx-auto mt-4 w-100" src="{{ mobile.product.image.url }}" style="width: 100%;height: auto;">
                             <div class="mx-auto w-100" style="text-align: center;color: gray;text-decoration: none;font-size: 10px;">{{ mobile.product.title}}</div>
                             <div><span class="badge badge-danger mr-1">%۲۰</span><span style="text-decoration: line-through;color: gray;">۱۲,۰۰۰</span></div>
