makin some changes

--- a/django-store/core/templates/base/header.html
+++ b/django-store/core/templates/base/header.html
@@ -6,8 +6,8 @@
     top: 0;z-index: 1;">
 
       <div>
-
-          <div class="dropdown" style="display: inline;">
+          {% if user.is_authenticated %}
+              <div class="dropdown" style="display: inline;">
                 <button class="basket btn buttons dropdown-toggle mt-3 mr-1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="create_basket()" style="font-size: 15px" ><i class="fas fa-shopping-basket"></i></button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="sabad" style="height: auto; width: 500px">
                     <button class="btn btn-primary ml-5 mb-1" onclick="delete_basket({{ user.user_baskets.id }})" style="font-size: 13px;width: 30%">حذف سبد خرید</button>
@@ -56,6 +56,13 @@
 
                 </div>
           </div>
+          {% else %}
+              <div style="display: inline">
+               <button class="basket btn mt-3 mr-1"  style="font-size: 15px;color: lightslategray" title="شما سبد خریدی ندارید" ><i class="fas fa-shopping-basket"></i></button>
+              </div>
+          {% endif %}
+
+
 
         <span class="m-2">|</span>
           {% if user.is_authenticated %}
